flux/apps/romm/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: romm

spec:
  selector:
    matchLabels:
      app: romm

  template:
    metadata:
      labels:
        app: romm

    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      
      volumes:
        - name: resources
          persistentVolumeClaim:
            claimName: resources
        - name: library
          persistentVolumeClaim:
            claimName: library
        - name: assets
          persistentVolumeClaim:
            claimName: assets
        - name: config
          persistentVolumeClaim:
            claimName: config

      containers:
        - name: romm
          image: ghcr.io/rommapp/romm

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          
          # livenessProbe:
          #   initialDelaySeconds: 80
          #   httpGet:
          #     path: /api/heartbeat
          #     port: http
          
          # readinessProbe:
          #   initialDelaySeconds: 80
          #   httpGet:
          #     path: /api/heartbeat
          #     port: http

          volumeMounts:
            - name: resources
              mountPath: /romm/resources
            - name: library
              mountPath: /romm/library
            - name: assets
              mountPath: /romm/assets
            - name: config
              mountPath: /romm/config
