flux/apps/romm/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: romm

spec:
  selector:
    app: romm

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
