flux/apps/romm/service_redis.yaml
apiVersion: v1
kind: Service

metadata:
  name: redis

spec:
  selector:
    app: redis

  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: redis
